--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ repository               : "GauthierRoy.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio_photo.jpeg"
-  name             : "Your Sidebar Name"
+  avatar           : "bio_photo.png"
+  name             : "Gauthier Roy"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "M.S. CS @gatech. Exploring Deep Learning, LLM security, agents, bias & NLP in general."
   location         : "Paris"
   employer         : "Georgia Institute of Technology"
   uri              : # URL
-  email            : "none@example.org" 
+  #email            : "none@example.org" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -37,7 +37,7 @@ author:
   impactstory      : # URL
   orcid            : 
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
   scopus           : # URL
 
