--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "GauthierRoy.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio_photo.png"
+  avatar           : "bio-photo.png"
   name             : "Gauthier Roy"
   pronouns         : # example: "she/her"  
   bio              : "M.S. CS @gatech. Exploring Deep Learning, LLM security, agents, bias & NLP in general."
