--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,202 @@ Gemfile.lock
 # Ingore files created by npm
 node_modules
 package-lock.json
+ml_reports/randomized_optimization/biblio.bib
+ml_reports/randomized_optimization/IEEEtran.cls
+ml_reports/randomized_optimization/paper.tex
+ml_reports/randomized_optimization/RHC_long_time.png
+ml_reports/randomized_optimization/timequeenmimic.png
+ml_reports/randomized_optimization/timesqueensa.png
+ml_reports/randomized_optimization/FlipFlop/convergence_mut_rate.png
+ml_reports/randomized_optimization/FlipFlop/feevalmmic.png
+ml_reports/randomized_optimization/FlipFlop/feevalsdecaySA.png
+ml_reports/randomized_optimization/FlipFlop/fitnessItALL.png
+ml_reports/randomized_optimization/FlipFlop/flipflopdecaysa.png
+ml_reports/randomized_optimization/FlipFlop/greedy_approach_genetic.png
+ml_reports/randomized_optimization/FlipFlop/heatmapLargeMIMIC.png
+ml_reports/randomized_optimization/FlipFlop/mut_rateGA.png
+ml_reports/randomized_optimization/FlipFlop/timeItALL.png
+ml_reports/randomized_optimization/FlipFlop/timeitermmic.png
+ml_reports/randomized_optimization/FlipFlop/timesa.png
+ml_reports/randomized_optimization/NN/finetunningSA.png
+ml_reports/randomized_optimization/NN/galoss.png
+ml_reports/randomized_optimization/NN/lcSA.png
+ml_reports/randomized_optimization/NN/lossRHC.png
+ml_reports/randomized_optimization/NN/RHClc.png
+ml_reports/randomized_optimization/Queens/allevals.png
+ml_reports/randomized_optimization/Queens/allit.png
+ml_reports/randomized_optimization/Queens/alltimes.png
+ml_reports/randomized_optimization/Queens/fevalsGA.png
+ml_reports/randomized_optimization/Queens/fevalsqueenmmc.png
+ml_reports/randomized_optimization/Queens/fevalsqueensa.png
+ml_reports/randomized_optimization/Queens/finetuningGA.png
+ml_reports/randomized_optimization/Queens/popsizeMIMIC.png
+ml_reports/randomized_optimization/Queens/SAinittempQueens.png
+ml_reports/randomized_optimization/Queens/timeGA.png
+ml_reports/randomized_optimization/Queens/weirdsmallga.png
+ml_reports/randomized_optimization/TSP/all_iterations.png
+ml_reports/randomized_optimization/TSP/alll_iterations.png
+ml_reports/randomized_optimization/TSP/mmc_keeppercent01.png
+ml_reports/randomized_optimization/TSP/mmc_keeppercent02.png
+ml_reports/randomized_optimization/TSP/sa_med_0999.png
+ml_reports/randomized_optimization/TSP/sa_med_fit_099.png
+ml_reports/randomized_optimization/TSP/sa_medium_schedule_decay_vs_fitness.pdf
+ml_reports/randomized_optimization/TSP/GA/mutation_rate.png
+ml_reports/randomized_optimization/TSP/GA/pop_evals.png
+ml_reports/randomized_optimization/intro/FourPeaks.png
+ml_reports/randomized_optimization/intro/fruits_repartition.png
+ml_reports/reinforcement_learning/biblio.bib
+ml_reports/reinforcement_learning/IEEEtran.cls
+ml_reports/reinforcement_learning/low_lr.png
+ml_reports/reinforcement_learning/paper.tex
+ml_reports/reinforcement_learning/pi_theta001.png
+ml_reports/reinforcement_learning/frozen/model_based/atej_si_jamaisnbchanged_it.png
+ml_reports/reinforcement_learning/frozen/model_based/it_policy_map_vi.png
+ml_reports/reinforcement_learning/frozen/model_based/nb_policy_changed_vi.png
+ml_reports/reinforcement_learning/frozen/model_based/pi_e_high.png
+ml_reports/reinforcement_learning/frozen/model_based/pi_e_low.png
+ml_reports/reinforcement_learning/frozen/model_based/pi_mean_reward_dep_gamma.png
+ml_reports/reinforcement_learning/frozen/model_based/success_rate_different_theta.png
+ml_reports/reinforcement_learning/frozen/model_based/success_rate_pi.png
+ml_reports/reinforcement_learning/frozen/model_based/success_rate_two_theta.png
+ml_reports/reinforcement_learning/frozen/model_based/vi_e_high.png
+ml_reports/reinforcement_learning/frozen/model_based/vi_e_low.png
+ml_reports/reinforcement_learning/frozen/model_based/vi_nb_polici_changed.png
+ml_reports/reinforcement_learning/frozen/q_learning/big_lr.png
+ml_reports/reinforcement_learning/frozen/q_learning/epsilon_trade_off.png
+ml_reports/reinforcement_learning/frozen/q_learning/lr_low.png
+ml_reports/reinforcement_learning/frozen/q_learning/mean_reward_exploit_explo.png
+ml_reports/reinforcement_learning/frozen/q_learning/perfect_lr.png
+ml_reports/reinforcement_learning/frozen/q_learning/perferct_lr.png
+ml_reports/reinforcement_learning/frozen/q_learning/polices_explo_eploit_trade.png
+ml_reports/reinforcement_learning/intro/frozen_lake_map_illustration.png
+ml_reports/reinforcement_learning/intro/mountain_car.png
+ml_reports/reinforcement_learning/mountain_car/model_based/0.8_value_map_pi.png
+ml_reports/reinforcement_learning/mountain_car/model_based/09_valuemap_vi.png
+ml_reports/reinforcement_learning/mountain_car/model_based/converge_seeds_pi.png
+ml_reports/reinforcement_learning/mountain_car/model_based/convergence_according_gamma.png
+ml_reports/reinforcement_learning/mountain_car/model_based/difference_size_conv.png
+ml_reports/reinforcement_learning/mountain_car/model_based/discretepb.png
+ml_reports/reinforcement_learning/mountain_car/model_based/eps01pi_reward.png
+ml_reports/reinforcement_learning/mountain_car/model_based/explaination_mountain_car.png
+ml_reports/reinforcement_learning/mountain_car/model_based/explanation_moutain_car.png
+ml_reports/reinforcement_learning/mountain_car/model_based/heat_map_vi.png
+ml_reports/reinforcement_learning/mountain_car/model_based/heatmap_vi.png
+ml_reports/reinforcement_learning/mountain_car/model_based/log_value_gamma09.png
+ml_reports/reinforcement_learning/mountain_car/model_based/pi_mean_reward_dep_gamma
+ml_reports/reinforcement_learning/mountain_car/model_based/pi_mean_reward_dep_gamma.png
+ml_reports/reinforcement_learning/mountain_car/model_based/pi_mean_reward_gamma06.png
+ml_reports/reinforcement_learning/mountain_car/model_based/policy_according_to_gamma.png
+ml_reports/reinforcement_learning/mountain_car/qlearning/q_learning_exploration.png
+ml_reports/reinforcement_learning/mountain_car/qlearning/q_learning_heatmap.png
+ml_reports/reinforcement_learning/mountain_car/qlearning/q_learning_trade_off.png
+ml_reports/supervised_learning.pdf/biblio.bib
+ml_reports/supervised_learning.pdf/epochs_f1_30_30.png
+ml_reports/supervised_learning.pdf/IEEEtran.cls
+ml_reports/supervised_learning.pdf/learning_rate_n_estimator.png
+ml_reports/supervised_learning.pdf/loss_score_best_architure.png
+ml_reports/supervised_learning.pdf/max_depth.png
+ml_reports/supervised_learning.pdf/paper.tex
+ml_reports/supervised_learning.pdf/plot_tf.pdf
+ml_reports/supervised_learning.pdf/poly_2.png
+ml_reports/supervised_learning.pdf/poly_linear.png
+ml_reports/supervised_learning.pdf/titanic_entropy_gini.png
+ml_reports/supervised_learning.pdf/Validation_Score_Epochs.png
+ml_reports/supervised_learning.pdf/boosting_fruits/best_depth.png
+ml_reports/supervised_learning.pdf/boosting_fruits/learning_curve.png
+ml_reports/supervised_learning.pdf/boosting_fruits/n_estimator.png
+ml_reports/supervised_learning.pdf/boosting_titanic/learning_rate_estimators.png
+ml_reports/supervised_learning.pdf/boosting_titanic/nb_estimators.png
+ml_reports/supervised_learning.pdf/intro/fruits_repartition.png
+ml_reports/supervised_learning.pdf/knn_fruits/acp.png
+ml_reports/supervised_learning.pdf/knn_fruits/base_learning_curve.png
+ml_reports/supervised_learning.pdf/knn_fruits/fine_tunning_n_with_var.png
+ml_reports/supervised_learning.pdf/knn_fruits/learning_curve_final.png
+ml_reports/supervised_learning.pdf/knn_fruits/loss_solver.png
+ml_reports/supervised_learning.pdf/knn_titanic/fine_tunning_k.png
+ml_reports/supervised_learning.pdf/knn_titanic/learning_curve_5nn.png
+ml_reports/supervised_learning.pdf/knn_titanic/learning_curve_best_param.png
+ml_reports/supervised_learning.pdf/nn_fruits/grid_search_archi.png
+ml_reports/supervised_learning.pdf/nn_fruits/lbfgs_learning_curve.png
+ml_reports/supervised_learning.pdf/nn_fruits/learning_cruve_110neurons.png
+ml_reports/supervised_learning.pdf/nn_fruits/nb_neurons_plot.png
+ml_reports/supervised_learning.pdf/nn_titanic/all_losses_f1.png
+ml_reports/supervised_learning.pdf/nn_titanic/architerture.png
+ml_reports/supervised_learning.pdf/nn_titanic/learning_curve_lbfgs_sgd.png
+ml_reports/supervised_learning.pdf/nn_titanic/loss_f1.png
+ml_reports/supervised_learning.pdf/svm_fruits/evolution_score_nb_features.png
+ml_reports/supervised_learning.pdf/svm_fruits/linear_learning_curve.png
+ml_reports/supervised_learning.pdf/svm_titanic/heat_map_rbf.png
+ml_reports/supervised_learning.pdf/svm_titanic/poly_degree.png
+ml_reports/supervised_learning.pdf/svm_titanic/rbf_learning_curve.png
+ml_reports/supervised_learning.pdf/tree_fruits/ccp_alpha_tuning.png
+ml_reports/supervised_learning.pdf/tree_fruits/depth_finetuning.png
+ml_reports/supervised_learning.pdf/tree_fruits/gini_entropy_fruits.png
+ml_reports/supervised_learning.pdf/tree_fruits/learning_curve_base.png
+ml_reports/supervised_learning.pdf/tree_titanic/gini_entropy_titanic.png
+ml_reports/supervised_learning.pdf/tree_titanic/node_cuted_gini_entropy.png
+ml_reports/supervised_learning.pdf/tree_titanic/titanic_base_tree_learning_curve.png
+ml_reports/unsupervised_learning/biblio.bib
+ml_reports/unsupervised_learning/IEEEtran.cls
+ml_reports/unsupervised_learning/original_cluster.png
+ml_reports/unsupervised_learning/paper.tex
+ml_reports/unsupervised_learning/umap.png
+ml_reports/unsupervised_learning/3/ica/choosek.png
+ml_reports/unsupervised_learning/3/ica/ICA_Mixing_Matrix.pdf
+ml_reports/unsupervised_learning/3/ica/new_cluster_euclidean.png
+ml_reports/unsupervised_learning/3/ica/originalcluster.png
+ml_reports/unsupervised_learning/3/ica/silbouldinTied.png
+ml_reports/unsupervised_learning/3/ica/tnse_ica.png
+ml_reports/unsupervised_learning/3/umap/choosek_umap.png
+ml_reports/unsupervised_learning/3/umap/cluster_beautiful.png
+ml_reports/unsupervised_learning/3/umap/clusterbeautiful.png
+ml_reports/unsupervised_learning/3/umap/clusterbeautifultruelabels.png
+ml_reports/unsupervised_learning/3/umap/compsition_new_labels.png
+ml_reports/unsupervised_learning/3/umap/find_k.png
+ml_reports/unsupervised_learning/3/umap/man_projection.png
+ml_reports/unsupervised_learning/3/umap/umap_truelabels.png
+ml_reports/unsupervised_learning/3/umap/umapcosine.png
+ml_reports/unsupervised_learning/4/pca/archi.png
+ml_reports/unsupervised_learning/4/pca/leanring_curve_og.png
+ml_reports/unsupervised_learning/4/pca/learning_curvepca.png
+ml_reports/unsupervised_learning/4/pca/learning_curves.png
+ml_reports/unsupervised_learning/clustering/fruits/chooseKEM.png
+ml_reports/unsupervised_learning/clustering/fruits/ditsibkmedoistruelabels.png
+ml_reports/unsupervised_learning/clustering/fruits/featuresbyclustersknn.png
+ml_reports/unsupervised_learning/clustering/fruits/fruits_rep.png
+ml_reports/unsupervised_learning/clustering/fruits/manh_elbow.png
+ml_reports/unsupervised_learning/clustering/fruits/tnsefruits.png
+ml_reports/unsupervised_learning/clustering/fruits/tnseporjectionEM.png
+ml_reports/unsupervised_learning/clustering/titanic/barplotCLUSTERKMEDOIS.png
+ml_reports/unsupervised_learning/clustering/titanic/emdiag.png
+ml_reports/unsupervised_learning/clustering/titanic/fullcov.png
+ml_reports/unsupervised_learning/clustering/titanic/GMMCLUSTERING.png
+ml_reports/unsupervised_learning/clustering/titanic/inKMEDOIS.png
+ml_reports/unsupervised_learning/clustering/titanic/kmeoidsPlottnse.png
+ml_reports/unsupervised_learning/clustering/titanic/reconstrucion_error_ica.png
+ml_reports/unsupervised_learning/clustering/titanic/reconsturcion_error_Random.png
+ml_reports/unsupervised_learning/clustering/titanic/titanic_BICAIC.png
+ml_reports/unsupervised_learning/clustering/titanic/toomuchClusterTIT.png
+ml_reports/unsupervised_learning/dim_red/scree_plot_fruits.png
+ml_reports/unsupervised_learning/dim_red/scree_plot_tit.png
+ml_reports/unsupervised_learning/dim_red/fruits/eigenvalpca.png
+ml_reports/unsupervised_learning/dim_red/fruits/johnliden.png
+ml_reports/unsupervised_learning/dim_red/fruits/kurtosisnbcompo.png
+ml_reports/unsupervised_learning/dim_red/fruits/pca_2.png
+ml_reports/unsupervised_learning/dim_red/fruits/pcaTNSE.png
+ml_reports/unsupervised_learning/dim_red/fruits/recerrorica.png
+ml_reports/unsupervised_learning/dim_red/fruits/recerrorpca.png
+ml_reports/unsupervised_learning/dim_red/fruits/tnseica.png
+ml_reports/unsupervised_learning/dim_red/fruits/tnserp.png
+ml_reports/unsupervised_learning/dim_red/fruits/umap2.png
+ml_reports/unsupervised_learning/dim_red/fruits/umap7.png
+ml_reports/unsupervised_learning/dim_red/titanic/icatnse.png
+ml_reports/unsupervised_learning/dim_red/titanic/kurtocompo.png
+ml_reports/unsupervised_learning/dim_red/titanic/pairwisedistfruits.png
+ml_reports/unsupervised_learning/dim_red/titanic/pcascreeplot.png
+ml_reports/unsupervised_learning/dim_red/titanic/tnsepca.png
+ml_reports/unsupervised_learning/dim_red/titanic/tnserptit.png
+ml_reports/unsupervised_learning/dim_red/titanic/umap_2_nn.png
+ml_reports/unsupervised_learning/dim_red/titanic/umap2nb.png
+ml_reports/unsupervised_learning/dim_red/titanic/umap10nb.png
+ml_reports/unsupervised_learning/dim_red/titanic/umapwithlabels.png
