--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "M.S. CS @gatech. Exploring Deep Learning, LLM security, agents, bias & NLP in general."
   location         : "Paris"
-  employer         : "Georgia Institute of Technology"
+  employer         : "Georgia Institute of Technology </br> - Université Technologique de Compiègne"
   uri              : # URL
   #email            : "none@example.org" 
 
